PYIC-8713: update state getters to use stateHistoryStack instead of stateStack
This prepares for the removal of stateStack